--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.36"
+        "laravel/framework": "5.1.36",
+        "overtrue/wechat": "~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
